# tsr-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.github/workflows/: audit.yml  ci.yml  nightly.yml
count_1/: Cargo.toml
count_1/src/: main.rs
count_2/: Cargo.toml
count_2/src/: lib.rs  main.rs
count_3/: Cargo.toml
count_3/src/: lib.rs  main.rs
count_4/: Cargo.toml
count_4/src/: lib.rs  main.rs
count_5/: Cargo.toml
count_5/src/: lib.rs  main.rs
count_6/: Cargo.toml
count_6/src/: lib.rs  main.rs
count_7/: Cargo.toml
count_7/src/: lib.rs  main.rs
count_8/: Cargo.toml
count_8/src/: lib.rs  main.rs
count_8/tests/: integration.rs
count_9/: Cargo.toml
count_9/src/: lib.rs  main.rs
count_9/tests/: integration.rs
counter_1/: Cargo.toml
counter_1/src/: main.rs
counter_2/: Cargo.toml
counter_2/src/: lib.rs  main.rs
counter_3/: Cargo.toml
counter_3/src/: lib.rs  main.rs
counter_4/: Cargo.toml
counter_4/src/: main.rs
counter_5/: Cargo.toml
counter_5/src/: lib.rs  main.rs
counter_6/: Cargo.toml
counter_6/src/: lib.rs  main.rs
counter_7/: Cargo.toml
counter_7/src/: lib.rs  main.rs
counter_8/: Cargo.toml
counter_8/src/: lib.rs  main.rs
counter_9/: Cargo.toml
counter_9/src/: lib.rs  main.rs
counter_9/tests/: integration.rs
hello_1/: Cargo.toml
hello_2/: Cargo.toml
hello_2/src/: lib.rs  main.rs
hello_3/: Cargo.toml
hello_3/src/: lib.rs  main.rs
hello_4/: Cargo.toml
hello_4/src/: lib.rs  main.rs
logbook_1/: Cargo.toml
logbook_1/src/: main.rs
logbook_2/: Cargo.toml
logbook_2/src/: main.rs
logbook_3/: Cargo.toml
logbook_3/src/: main.rs
logbook_4/: Cargo.toml  README.md
logbook_4/src/: lib.rs  main.rs
memo_1/: Cargo.toml
memo_1/src/: lib.rs  main.rs
memo_2/: Cargo.toml
memo_2/src/: lib.rs  main.rs
memo_3/: Cargo.toml
memo_3/src/: lib.rs  main.rs
memo_4/: Cargo.toml
memo_4/src/: lib.rs  main.rs
memo_5/: Cargo.toml
memo_5/src/: lib.rs  main.rs
scratch/: Cargo.toml
scratch/src/: lib.rs  main.rs
scratch/tests/: integration.rs
slim_1/: Cargo.toml
slim_1/src/: lib.rs  main.rs
slim_2/: Cargo.toml
slim_2/src/: lib.rs  main.rs
slim_3/: Cargo.toml
slim_3/src/: lib.rs  main.rs
timer_1/: Cargo.toml
timer_2/: Cargo.toml
weather_1/: Cargo.toml
weather_2/: Cargo.toml
weather_3/: Cargo.toml
weather_3/src/: lib.rs  main.rs
weather_3/tests/data/: ws.json
weather_4/: Cargo.toml
weather_4/src/: lib.rs  main.rs
(+13 files in other folders)
