[workspace]
members = [
    "count_1",
    "count_2",
    "count_3",
    "scratch",
    "hello_1",
    "hello_2",
    "hello_3",
    "hello_4",
    "count_4",
    "count_5",
    "count_6",
    "count_7",
    "count_8",
    "count_9",
    "logbook_1",
    "logbook_2",
    "logbook_3",
    "logbook_4", "memo_1",
]
resolver = "2"
