[workspace]
members = [
    "count_1",
    "count_2",
    "count_3",
    "scratch",
    "hello_1",
    "hello_2",
    "hello_3",
    "count_4",
    "count_5",
    "count_6",
    "count_7",
    "count_8",
    "count_9",
    "logbook_1",
    "logbook_2",
    "logbook_3",
    "logbook_4",
    "memo_1",
    "memo_2",
    "memo_3",
    "memo_4",
    "memo_5",
    "weather_1",
    "weather_2",
    "weather_3",
    "weather_4", "timer_1", "slim_1", "timer_2", "slim_2",
]
resolver = "2"
