[package]
name = "logbook_4"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
description = """
Record observations in a logbook file, or list previous observations.
"""
keywords = ["cli", "utility", "text"]
categories = ["command-line-utilities"]
repository = "https://github.com/bitfield/tsr-tools"
authors = ["John Arundel <john@bitfieldconsulting.com>"]

[dependencies]
anyhow = "1.0.89"
tempfile = "3.13.0"
