[package]
name = "scratch"
version = "0.1.0"
edition = "2021"
authors = ["John Arundel <john@bitfieldconsulting.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive", "env"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.216" }
serde_json = "1.0.133"
url = "2.5.4"
