[package]
name = "weather_3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env"] }
httpmock = "0.7.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216" }
serde_json = "1.0.134"
url = "2.5.4"
