[package]
name = "weather_4"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env"] }
reqwest = { workspace = true }
serde_json = "1.0.134"
url = "2.5.4"

[dev-dependencies]
httpmock = "0.8.1"
http = "1.3.1"
